fix footer and about block

--- a/about.html
+++ b/about.html
@@ -192,54 +192,53 @@
     <!-- Main -->
     <main>
       <section class="about">
-
-          <div class="wrapper">
-            <div class="about__content content">
-              <div class="content__wrapper">
-                <h1 class="content__title">О нас</h1>
-                <div class="content__grid">
-                  <div class="content__item">
-                    <img src="assets/images/faq-fish-icon.svg" alt="">
-                    <p class="content__text">Более 20 000 товаров в наличии на собственном складе</p>
-                  </div>
-                  <div class="content__item">
-                    <img src="assets/images/faq-fish-icon.svg" alt="">
-                    <p class="content__text">Более 20 000 товаров в наличии на собственном складе</p>
-                  </div>
-                  <div class="content__item">
-                    <img src="assets/images/faq-fish-icon.svg" alt="">
-                    <p class="content__text">Более 20 000 товаров в наличии на собственном складе</p>
-                  </div>
-                  <div class="content__item">
-                    <img src="assets/images/faq-fish-icon.svg" alt="">
-                    <p class="content__text">Более 20 000 товаров в наличии на собственном складе</p>
-                  </div>
-                  <div class="content__item">
-                    <img src="assets/images/faq-fish-icon.svg" alt="">
-                    <p class="content__text">Более 20 000 товаров в наличии на собственном складе</p>
-                  </div>
-                  <div class="content__item">
-                    <img src="assets/images/faq-fish-icon.svg" alt="">
-                    <p class="content__text">Более 20 000 товаров в наличии на собственном складе</p>
-                  </div>
+        <div class="wrapper">
+          <div class="about__content content">
+            <div class="content__wrapper">
+              <h1 class="content__title">О нас</h1>
+              <div class="content__grid">
+                <div class="content__item">
+                  <img src="assets/images/faq-fish-icon.svg" alt="">
+                  <p class="content__text">Более 20 000 товаров в наличии на собственном складе</p>
+                </div>
+                <div class="content__item">
+                  <img src="assets/images/faq-fish-icon.svg" alt="">
+                  <p class="content__text">Более 20 000 товаров в наличии на собственном складе</p>
+                </div>
+                <div class="content__item">
+                  <img src="assets/images/faq-fish-icon.svg" alt="">
+                  <p class="content__text">Более 20 000 товаров в наличии на собственном складе</p>
+                </div>
+                <div class="content__item">
+                  <img src="assets/images/faq-fish-icon.svg" alt="">
+                  <p class="content__text">Более 20 000 товаров в наличии на собственном складе</p>
+                </div>
+                <div class="content__item">
+                  <img src="assets/images/faq-fish-icon.svg" alt="">
+                  <p class="content__text">Более 20 000 товаров в наличии на собственном складе</p>
+                </div>
+                <div class="content__item">
+                  <img src="assets/images/faq-fish-icon.svg" alt="">
+                  <p class="content__text">Более 20 000 товаров в наличии на собственном складе</p>
                 </div>
               </div>
             </div>
-            <div class="about__bubble"><span class="dot"></span></div>
-            <div class="about__bubble"><span class="dot"></span></div>
-            <div class="about__bubble"><span class="dot"></span></div>
-            <div class="about__bubble"><span class="dot"></span></div>
-            <div class="about__bubble"><span class="dot"></span></div>
-            <div class="about__bubble"><span class="dot"></span></div>
-            <div class="about__bubble"><span class="dot"></span></div>
-            <div class="about__bubble"><span class="dot"></span></div>
-            <div class="about__bubble"><span class="dot"></span></div>
-            <div class="about__bubble"><span class="dot"></span></div>
-            <div class="about__bubble"><span class="dot"></span></div>
-            <div class="about__bubble"><span class="dot"></span></div>
-            <div class="about__bubble"><span class="dot"></span></div>
-            <div class="about__bubble"><span class="dot"></span></div>
           </div>
+          <div class="about__bubble"><span class="dot"></span></div>
+          <div class="about__bubble"><span class="dot"></span></div>
+          <div class="about__bubble"><span class="dot"></span></div>
+          <div class="about__bubble"><span class="dot"></span></div>
+          <div class="about__bubble"><span class="dot"></span></div>
+          <div class="about__bubble"><span class="dot"></span></div>
+          <div class="about__bubble"><span class="dot"></span></div>
+          <div class="about__bubble"><span class="dot"></span></div>
+          <div class="about__bubble"><span class="dot"></span></div>
+          <div class="about__bubble"><span class="dot"></span></div>
+          <div class="about__bubble"><span class="dot"></span></div>
+          <div class="about__bubble"><span class="dot"></span></div>
+          <div class="about__bubble"><span class="dot"></span></div>
+          <div class="about__bubble"><span class="dot"></span></div>
+        </div>
       </section>
 
       <!-- section-properties -->
@@ -351,7 +350,7 @@
               <div class="faq__bubles buble4"></div>
             </div>
           </div>
-
+      </section>
     <!-- footer -->
     <footer class="footer">
       <div class="container">
