--- a/catalog.html
+++ b/catalog.html
@@ -197,9 +197,9 @@
                 <div class="list" id="list">
                     <div class="list__item" id="0"></div>
                 </div>
-                <input type="text" id="inputName">
-                <input type="number" id="inputPrice">
-                <input type="file" id="inputImg">
+                <input type="text" id="inputName" placeholder="Введи наименование товара">
+                <input type="number" id="inputPrice" placeholder="Введи цену товара">
+                <input type="file" id="inputImg" placeholder="Добавьте изображение товара">
                 <button id="buttonID" type="submit">Добавить</button>
             </div>
         </section>
