--- a/galary.html
+++ b/galary.html
@@ -95,7 +95,7 @@
 						<li class="main-menu__item main-menu__item--active">
 							<a href="#!">Галерея</a>
 						</li>
-						<li class="main-menu__item"><a href="galary.html">Каталог</a></li>
+						<li class="main-menu__item"><a href="catalog.html">Каталог</a></li>
 					</ul>
 					<!-- mobile -->
 					<div class="mobile__wrapp">
