--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <a href="about.html">О&nbsp;нас</a>
               </li>
               <li class="main-menu__item"><a href="galary.html">Галерея</a></li>
-              <li class="main-menu__item"><a href="galary.html">Каталог</a></li>
+              <li class="main-menu__item"><a href="catalog.html">Каталог</a></li>
             </ul>
             <!-- mobile -->
             <div class="mobile__wrapp">
