about page full adaptive

--- a/about.html
+++ b/about.html
@@ -199,28 +199,28 @@
               <h1 class="content__title">О нас</h1>
               <div class="content__grid">
                 <div class="content__item">
-                  <img src="assets/images/faq-fish-icon.svg" alt="">
+                  <img src="assets/images/grid-icon1.svg" alt="">
                   <p class="content__text">Более 20 000 товаров в наличии на собственном складе</p>
                 </div>
                 <div class="content__item">
-                  <img src="assets/images/faq-fish-icon.svg" alt="">
-                  <p class="content__text">Более 20 000 товаров в наличии на собственном складе</p>
+                  <img src="assets/images/grid-icon4.svg" alt="">
+                  <p class="content__text">Гарантия на товар и возврат</p>
                 </div>
                 <div class="content__item">
-                  <img src="assets/images/faq-fish-icon.svg" alt="">
-                  <p class="content__text">Более 20 000 товаров в наличии на собственном складе</p>
+                  <img src="assets/images/grid-icon6.svg" alt="">
+                  <p class="content__text">Скидка 10% по карте магазина</p>
                 </div>
                 <div class="content__item">
-                  <img src="assets/images/faq-fish-icon.svg" alt="">
-                  <p class="content__text">Более 20 000 товаров в наличии на собственном складе</p>
+                  <img src="assets/images/grid-icon5.svg" alt="">
+                  <p class="content__text">Подтверждение заказа в течении 30 минут</p>
                 </div>
                 <div class="content__item">
-                  <img src="assets/images/faq-fish-icon.svg" alt="">
-                  <p class="content__text">Более 20 000 товаров в наличии на собственном складе</p>
+                  <img src="assets/images/grid-icon2.svg" alt="">
+                  <p class="content__text">Сотрудничаем только с официальными поставщиками</p>
                 </div>
                 <div class="content__item">
-                  <img src="assets/images/faq-fish-icon.svg" alt="">
-                  <p class="content__text">Более 20 000 товаров в наличии на собственном складе</p>
+                  <img src="assets/images/grid-icon3.svg" alt="">
+                  <p class="content__text">Доставка в любую точку области</p>
                 </div>
               </div>
             </div>
