--- a/about.html
+++ b/about.html
@@ -194,7 +194,7 @@
     <main>
       <section class="about">
         <div class="wrapper">
-          <div class="about__content content">
+          <div class="about__content content" onclick="toggle_width('wrapp', 'content__grid', 'content__title')" id="wrapp">
             <div class="content__wrapper">
               <h1 class="content__title">О нас</h1>
               <div class="content__grid">
