galary add block photo

--- a/galary.html
+++ b/galary.html
@@ -46,6 +46,9 @@
 						<input type="text" class="input-field" placeholder="ФИО *" required>
 					</div>
 					<div class="form__field">
+						<input type="email" name="email" class="input-field" placeholder="Email">
+					</div>
+					<div class="form__field">
 						<input type="tel" name="phone" class="input-field tel" placeholder="+7(000)000-00-00 *" required>
 					</div>
 					<div class="form__field">
@@ -161,7 +164,7 @@
 							<img src="assets/images/galary/slider/4.webp" alt="4" />
 						</div>
 						<div class="slide">
-							<img src="assets/images/galary/slider/5.webp" alt="5" />
+							<img src="assets/images/galary/slider/3.jpg" alt="5" />
 						</div>
 					</div>
 					<div class="navigation-manual flex">
@@ -182,76 +185,91 @@
 		</section>
 
 		<!-- section photos -->
-		<section class="galary">
-			<div class="galary__container container">
-				<h2 class="galary__title title">Фотографии, предоставленные покупателями</h2>
-				<div class="galary-grid">
-					<div class="galary-grid__item">
-					  <img
-						 class="galary__pic"
-						 src="assets/images/galary/photos/1.jpg"
-						 alt=""
-					  />
-					</div>
-	
-					<div class="galary-grid__item">
-					  <img
-						 class="galary__pic"
-						 src="assets/images/galary/photos/1.jpg"
-						 alt=""
-					  />
-					</div>
-	
-					<div class="galary-grid__item">
-					  <img
-						 class="galary__pic"
-						 src="assets/images/galary/photos/1.jpg"
-						 alt=""
-					  />
-					</div>
-	
-					<div class="galary-grid__item">
-					  <img
-						 class="galary__pic"
-						 src="assets/images/galary/photos/1.jpg"
-						 alt=""
-					  />
-					</div>
-	
-					<div class="galary-grid__item">
-					  <img
-						 class="galary__pic"
-						 src="assets/images/galary/photos/1.jpg"
-						 alt=""
-					  />
-					</div>
-	
-					<div class="galary-grid__item">
-					  <img
-						 class="galary__pic"
-						 src="assets/images/galary/photos/1.jpg"
-						 alt=""
-					  />
-					</div>
-	
-					<div class="galary-grid__item">
-					  <img
-						 class="galary__pic"
-						 src="assets/images/galary/photos/1.jpg"
-						 alt=""
-					  />
-					</div>
-	
-					<div class="galary-grid__item">
-					  <img
-						 class="galary__pic"
-						 src="assets/images/galary/photos/1.jpg"
-						 alt=""
-					  />
-					</div>
-				 </div>
-			</div>
-		</section>
+
+		<section class="galary__section container">
+			<h2 class="galary__examples-title title">
+					Фотографии покупателей
+			</h2>
+			<div class="gallery__plit">
+			      <div class="gallery__card">
+			        <img
+			          class="gallery__card__pic"
+			          src="assets/images/galary/photos/1.jpg"
+			          alt=""
+			        />
+			      </div>
+			      <div class="gallery__card">
+			        <img
+			          class="gallery__card__pic"
+			          src="assets/images/galary/photos/2.jpg"
+			          alt=""
+			        />
+			      </div>
+			      <div class="gallery__card">
+			        <img
+			          class="gallery__card__pic"
+			          src="assets/images/galary/photos/3.jpg"
+			          alt=""
+			        />
+			      </div>
+			      <div class="gallery__card">
+			        <img
+			          class="gallery__card__pic"
+			          src="assets/images/galary/photos/4.jpg"
+			          alt=""
+			        />
+			      </div>
+			      <div class="gallery__card">
+			        <img
+			          class="gallery__card__pic"
+			          src="assets/images/galary/photos/5.jpg"
+			          alt=""
+			        />
+			      </div>
+			      <div class="gallery__card">
+			        <img
+			          class="gallery__card__pic"
+			          src="assets/images/galary/photos/6.jpg"
+			          alt=""
+			        />
+			      </div>
+			      <div class="gallery__card">
+			        <img
+			          class="gallery__card__pic"
+			          src="assets/images/galary/photos/7.jpg"
+			          alt=""
+			        />
+			      </div>
+			      <div class="gallery__card">
+			        <img
+			          class="gallery__card__pic"
+			          src="assets/images/galary/photos/8.jpg"
+			          alt=""
+			        />
+			      </div>
+			      <div class="gallery__card">
+			        <img
+			          class="gallery__card__pic"
+			          src="assets/images/galary/photos/9.jpg"
+			          alt=""
+			        />
+			      </div>
+		    	</div>
+
+			    <div class="slider2">
+			      <div class="slider__container">
+			        <button class="slider__btn slider__btn_left">
+			          <i class="fas fa-chevron-left"></i>
+			        </button>
+			        <button class="slider__btn slider__btn_right">
+			          <i class="fas fa-chevron-right"></i>
+			        </button>
+			      </div>
+			      <button class="slider__close">
+			        <i class="far fa-times-circle"></i>
+			      </button>
+			    </div>
+		 </section>
 	</main>
 
 	    <!-- footer -->
@@ -372,6 +390,8 @@
     </footer>
 	<script src="assets/js/galary.js"></script>
 	<script src="assets/js/main.js"></script>
+	<script src="assets/js/slider2.js"></script>
+
 </body>
 
 </html>
