--- a/galary.html
+++ b/galary.html
@@ -165,7 +165,7 @@
 							<img src="assets/images/galary/slider/4.webp" alt="4" />
 						</div>
 						<div class="slide">
-							<img src="assets/images/galary/slider/3.jpg" alt="5" />
+							<img src="assets/images/galary/slider/5.jpg" alt="5" />
 						</div>
 					</div>
 					<div class="navigation-manual flex">
@@ -194,63 +194,63 @@
 			<div class="gallery__plit">
 			      <div class="gallery__card">
 			        <img
-			          class="gallery__card__pic"
+			          class="gallery__card-pic"
 			          src="assets/images/galary/photos/1.jpg"
 			          alt=""
 			        />
 			      </div>
 			      <div class="gallery__card">
 			        <img
-			          class="gallery__card__pic"
+			          class="gallery__card-pic"
 			          src="assets/images/galary/photos/2.jpg"
 			          alt=""
 			        />
 			      </div>
 			      <div class="gallery__card">
 			        <img
-			          class="gallery__card__pic"
+			          class="gallery__card-pic"
 			          src="assets/images/galary/photos/3.jpg"
 			          alt=""
 			        />
 			      </div>
 			      <div class="gallery__card">
 			        <img
-			          class="gallery__card__pic"
+			          class="gallery__card-pic"
 			          src="assets/images/galary/photos/4.jpg"
 			          alt=""
 			        />
 			      </div>
 			      <div class="gallery__card">
 			        <img
-			          class="gallery__card__pic"
+			          class="gallery__card-pic"
 			          src="assets/images/galary/photos/5.jpg"
 			          alt=""
 			        />
 			      </div>
 			      <div class="gallery__card">
 			        <img
-			          class="gallery__card__pic"
+			          class="gallery__card-pic"
 			          src="assets/images/galary/photos/6.jpg"
 			          alt=""
 			        />
 			      </div>
 			      <div class="gallery__card">
 			        <img
-			          class="gallery__card__pic"
+			          class="gallery__card-pic"
 			          src="assets/images/galary/photos/7.jpg"
 			          alt=""
 			        />
 			      </div>
 			      <div class="gallery__card">
 			        <img
-			          class="gallery__card__pic"
+			          class="gallery__card-pic"
 			          src="assets/images/galary/photos/8.jpg"
 			          alt=""
 			        />
 			      </div>
 			      <div class="gallery__card">
 			        <img
-			          class="gallery__card__pic"
+			          class="gallery__card-pic"
 			          src="assets/images/galary/photos/9.jpg"
 			          alt=""
 			        />
@@ -259,10 +259,10 @@
 
 			    <div class="slider2">
 			      <div class="slider__container">
-			        <button class="slider__btn slider__btn_left">
+			        <button class="slider__btn slider__btn-left">
 			          <i class="fas fa-chevron-left"></i>
 			        </button>
-			        <button class="slider__btn slider__btn_right">
+			        <button class="slider__btn slider__btn-right">
 			          <i class="fas fa-chevron-right"></i>
 			        </button>
 			      </div>
