--- a/catalog.html
+++ b/catalog.html
@@ -92,7 +92,7 @@
               >
               <button
                 type="submit"
-                class="button form__submit primary-btn--orange"
+                class="button form__submit primary-btn--grey"
               >
                 Отправить
               </button>
