--- a/galary.html
+++ b/galary.html
@@ -57,7 +57,7 @@
 					<div class="form__footer">
 						<span class="span main-text">Отправляя заявку, Вы соглашаетесь с <a href="404.html">политикой
 								конфиденциальности</a></span>
-						<button type="submit" class="button form__submit primary-btn--orange">Отправить</button>
+						<button type="submit" class="button form__submit primary-btn--grey">Отправить</button>
 					</div>
 				</form>
 			</div>
