--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               >
               <button
                 type="submit"
-                class="button form__submit primary-btn--green"
+                class="button form__submit primary-btn--grey"
               >
                 Отправить
               </button>
